--- a/config/config.json
+++ b/config/config.json
@@ -1,18 +1,18 @@
 {
   "local": {
     "username": "root",
-    "password": "",
+    "password": "root1234",
     "database": "cohortly",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
-"development": {
-  "username": "root",
-  "password": "",
-  "database": "cohortly",
-  "host": "127.0.0.1",
-  "dialect": "mysql"
-},
+  "development": {
+    "username": "root",
+    "password": "root1234",
+    "database": "cohortly",
+    "host": "127.0.0.1",
+    "dialect": "mysql"
+  },
   "test": {
     "username": "root",
     "password": null,
