--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mysql2": "^3.14.0",
     "node-input-validator": "^4.5.1",
     "nodemailer": "^6.10.1",
+    "nodemon": "^3.1.10",
     "sequelize": "^6.37.7"
   },
   "devDependencies": {
