--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "author": "Abdulkarim",
   "license": "ISC",
   "dependencies": {
+    "@supabase/supabase-js": "^2.80.0",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.2.0",
