--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "node-input-validator": "^4.5.1",
     "nodemailer": "^6.10.1",
     "nodemon": "^3.1.10",
-    "sequelize": "^6.37.7"
+    "sequelize": "^6.37.7",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "prettier": "^3.5.3",
