--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "node-input-validator": "^4.5.1",
     "nodemailer": "^6.10.1",
     "nodemon": "^3.1.10",
+    "redoc": "^2.5.2",
     "sequelize": "^6.37.7",
     "streamifier": "^0.1.1",
     "swagger-jsdoc": "^6.2.8",
