--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "@supabase/supabase-js": "^2.80.0",
+    "axios": "^1.13.2",
     "bcryptjs": "^3.0.2",
+    "bunnycdn-stream": "^2.5.5",
     "cloudinary": "^2.8.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
