--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "nodemon": "^3.1.10",
     "redoc": "^2.5.2",
     "sequelize": "^6.37.7",
-    "streamifier": "^0.1.1",
+    "sequelize-cli": "^6.6.2",
+    "sequelize-auto": "^0.8.8",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "yamljs": "^0.3.0"
